changed img width

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 
               <div class="row">
                 <div class="col-6">
-                  <img src="img/cloud.png" width="150px" class="main-icon" alt="cloud" />
-                    <strong id="current-temperature"></strong>
+                  <img src="img/cloud.png" width="120px" id="main-icon" alt="cloud" />
+                    <div><strong id="current-temperature"></strong>
                     <span class="metrics"><a href="#" id="C">°C | </a>  <a href="#" id="F">°F</a></span
                     ></p>
+                  </div>
                   </div>
              
             
