--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-6">
                   <img src="" width="120px" id="main-icon" alt="cloud" />
                     <div><strong id="current-temperature"></strong>
-                    <span class="metrics"><a href="#" id="C">°C | </a>  <a href="#" id="F">°F</a></span
+                    <span class="units"><a href="#" id="C">°C | </a>  <a href="#" id="F">°F</a></span
                     ></p>
                   </div>
                   </div>
