--- a/index.html
+++ b/index.html
@@ -59,11 +59,23 @@
           </div>
           </div>  
 
+          
+          <div class="weather-forecast">
+            <div class="row">
+            <div class="col-2">
+              <div class="forecast-date">Wed</div>
+              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="32"/>
+              <div class="forecast-temperature"><span class="forecast-temp-max">30° </span><span class="forecast-temp-min">21°</span></div>
+            </div>
+          </div>
+          </div>
+        </div> 
+      </div>
         <small>
-          <a href="https://github.com/parkhom-nata/my-weather-ap" target="_blank">Open source code</a> by parkhom nata
+        <a href="https://github.com/parkhom-nata/my-weather-ap" target="_blank">Open source code</a> by parkhom nata
         </small>
-      </div> 
-    </div>
+      
+   
 
     <script src="src/app.js"></script>
 </body>
