--- a/index.html
+++ b/index.html
@@ -58,17 +58,9 @@
             </div>
           </div>
           </div>  
-
           
-          <div class="weather-forecast">
-            <div class="row">
-            <div class="col-2">
-              <div class="forecast-date">Wed</div>
-              <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="" width="32"/>
-              <div class="forecast-temperature"><span class="forecast-temp-max">30° </span><span class="forecast-temp-min">21°</span></div>
+          <div class="weather-forecast" id="forecast">
             </div>
-          </div>
-          </div>
         </div> 
       </div>
         <small>
