Added night icons

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
               <div class="row">
                 <div class="col-6">
-                  <img src="" width="120px" id="main-icon" alt="cloud" />
+                  <img src="" width="120px" id="main-icon" alt="" />
                     <div><strong id="current-temperature"></strong>
                     <span class="units"><a href="#" id="C">°C | </a>  <a href="#" id="F">°F</a></span
                     ></p>
