--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                 <div class="col-6">
                   <img src="" width="120px" id="main-icon" alt="" />
                     <div><strong id="current-temperature"></strong>
-                    <span class="units"><a href="#" id="C">°C | </a>  <a href="#" id="F">°F</a></span
-                    ></p>
+                    <span class="units" id="C">°C</span>
                   </div>
                   </div>
              
